# enhanced-typing-assistant

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  LICENSE  MANIFEST.in  README.md  accessibility.py  api_providers.py  app.py  assistant_ui.py  assistant_ui.spec  auth_dialogs.py  cache.py  cache_manager.py  cognitive_assistant_ui.py  cognitive_support.py  config.py  content_moderator.py  create_assistant.py  create_folders.bat  create_structure.py  docker-compose.yml  enhanced_typing_assistant.py  file_version_info.txt  generate_key.py  imports.py  manifest.xml  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  run.py  server.js  set_api_key.py  setup.cfg  setup.py  setup_dev.bat  (+11 more)
.github/: CONTRIBUTING.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
backend/: package-lock.json  package.json  server.js
client/: package-lock.json  package.json
client/src/: App.css  App.js
client/src/components/: TypingAssistant.css  TypingAssistant.js
config/: default_config.json
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.jsx  index.js
modules/: ai_suggestions.py  api_manager.py  chatbot_interface.py  clipboard_manager.py  collaboration.py  config_manager.py  data_visualization.py  database_manager.py  error_handler.py  grammar_enhancement.py  input_validator.py  performance_monitor.py  plugin_manager.py  sample_plugin.py  search_replace.py  sentiment_analysis.py  settings_manager.py  settings_panel.py  speech_to_text.py  spell_check.py  text_correction.py  text_to_speech.py  theme_manager.py  translation.py  translation_manager.py  user_preferences.py  word_suggestion.py
plugins/: sample_plugin.py
resources/: styles.qss  styles_dark.qss  styles_high_contrast.qss  styles_light.qss
resources/accessibility/: color_schemes.json  input_assistance.json  settings.json
resources/icons/: essential_icons.json
resources/keyboard_layouts/: Untitled-199.txt  dvorak.json  en_US.json
resources/patterns/: autocorrect.json  typing_patterns.json
tests/: conftest.py  test_auth.py  test_config.py  test_text_correction.py  test_theme_manager.py  test_translation_manager.py  test_ui.py  test_user_preferences.py  test_word_suggestion.py
typing_assistant/: __main__.py  app.py  config.py  main.py  styles.qss  text_correction.py
typing_assistant/api/: gender_inclusive_api.py
typing_assistant/config/: __init__.py  ai_models.py  config_manager.py  default_config.py
typing_assistant/core/: api_client.py  speech_handler.py  text_processor.py
typing_assistant/gamification/: achievements.py  stats.py  visualization.py  word_counter.py
typing_assistant/gec/: __init__.py  code_analyzer.py  constants.py  correct_text.py  dictionary.py  gender_inclusive.py  language_config.py  model.py  processor.py  utils.py
typing_assistant/resources/dictionaries/: README.md  common_misspellings.txt  internet_slang.txt
typing_assistant/resources/dictionaries/domain_specific/: medical.txt  technical.txt
typing_assistant/services/: ai_service.py
typing_assistant/ui/: accessibility.py  api_key_dialog.py  debug_panel.py  keyboard_shortcuts.py  login_dialog.py  main_window.py  setup_wizard.py  usage_widget.py
typing_assistant/utils/: config_manager.py  security.py  theme_manager.py
web/: package.json
web/public/: index.html
web/src/: App.tsx
web/src/components/: GenderInclusiveEditor.tsx
web/temp-web/: package-lock.json  package.json
web/temp-web/public/: index.html
web/temp-web/src/: App.tsx
