[metadata]
license_files = LICENSE

[flake8]
max-line-length = 100
exclude = .git,__pycache__,build,dist,*.egg-info
ignore = E203, W503
per-file-ignores =
    __init__.py:F401

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_unreachable = True

[mypy.plugins.numpy.*]
ignore_missing_imports = True

[mypy.plugins.PyQt5.*]
ignore_missing_imports = True

[isort]
profile = black
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 100

[tool:pytest]
testpaths = tests
python_files = test_*.py
addopts = --verbose --cov=typing_assistant --cov-report=html

[coverage:run]
source = typing_assistant
omit =
    */tests/*
    setup.py
    conftest.py

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise NotImplementedError
    if __name__ == .__main__.:
    pass
    raise ImportError
